# Azeirli-Computer-Communications-2025

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md
assignment2-tester/: Cargo.toml  conf.toml
assignment2-tester/server/: Cargo.toml
assignment2-tester/server/src/: main.rs
assignment2-tester/server/src/routes/: guards.rs  home.rs  mod.rs
assignment2-tester/src/: hw2_tests.rs  lib.rs  main.rs  tests.rs
assignment2-tester/src/axum/: main.rs  middlewares.rs  routes.rs
assignment2-tester/src/axum/utils/: helpers.rs
assignment2-tester/testee/: client  client.c  output - Usage1.txt  output - Validate HTTP Request Structure.txt  output - Validate HTTP Response Test.txt
assignment2-tester/tests/: quick_dev.rs
assignment3-tester/: Cargo.toml
assignment3-tester/src/: lib.rs
batch-runner/: Cargo.toml
batch-runner/src/: lib.rs  main.rs
server/: main.rs
server/routes/: fairings.rs  home.rs  mod.rs
test-runner/: Cargo.toml
tests_lib/: Cargo.toml
tests_lib/src/: lib.rs  proc.rs  run.rs  test_manager.rs  utils.rs
