[workspace]
resolver = "2"

members = [ 
    "batch-runner",
    "tests_lib", 
    "assignment2-tester",
    "assignment3-tester", 
    "assignment4-tester",
]

exclude = [
    "assignment3-tester",
    "assignment4-tester",
    "batch-runner"
]

[workspace.metadata]
backtrace = "full"

[profile.dev]
debug = true

[profile.release]
debug = true
