[package]
name = "assignment2-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tests_lib = {path = "../tests_lib"}
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
reqwest = { version = "0.12", features = ["blocking"] }
hyper = { version = "1.6", features = ["client", "http1"] }
hyper-util = "0.1.10"
libc = "0.2.101"
rocket = "^0.5"
axum = "0.8.1"
hmac = "0.12"
sha2 = "0.10"
tower = "0.5"
infer = "0.3"
chrono = "0.4"

[dev-dependencies]
httpc-test = "0.1.1"
anyhow = "1.0.44"

[[bin]]
name = "axum_server"
path = "src/axum/main.rs"