[package]
name = "batch-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tests_lib = {path = "../tests_lib"}
assignment2-tester = {path = "../assignment2-tester"}
anyhow = "1.0.41"
infer = "0.3.0"
tar = "0.4.26"
flate2 = "1.0.20"
bzip2 = "0.4.1"
xz2 = "0.1"
zip = "0.5.10"
csv = "1.1.6"
xxhash-rust = {version = "0.8.5", features = ["xxh3", "const_xxh3", "xxh32"]}